--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>When the conversation with grandma takes an unexpected turn!😱</title>
+<title>Grandma cooks like she means it.😂😱</title>
 <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
 <style>
@@ -138,7 +138,7 @@ video{
 ></script></center></div>
 </div>
 
-<div class="video-title">When the conversation with grandma takes an unexpected turn!😱<span aria-label="smile" role="img"></span>
+<div class="video-title">Grandma cooks like she means it.😂😱<span aria-label="smile" role="img"></span>
 </div>
 
 <div class="video-wrapper">
